[FLINK-4665] [misc] Remove unnecessary boxing/unboxing of primitive types in various places
This closes #2537